--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,9 @@
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 @font-face {
     font-family: "Game-of-Thrones";
     src: url(../fonts/game-of-thrones-kg25.ttf);
@@ -5,6 +11,12 @@
 @font-face {
     font-family: "Trajan-Pro-3";
     src: url(../fonts/Trajan-Pro-3-Regular.otf);
+}
+
+body {
+    max-width: 1920px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 h1, h2{
