--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,132 +1,140 @@
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
-	font-family: 'Game-of-Thrones';
-	src: url(../fonts/game-of-thrones-kg25.ttf);
+  font-family: "Game-of-Thrones";
+  src: url(../fonts/game-of-thrones-kg25.ttf);
 }
 @font-face {
-	font-family: 'Trajan-Pro-3';
-	src: url(../fonts/Trajan-Pro-3-Regular.otf);
+  font-family: "Trajan-Pro-3";
+  src: url(../fonts/Trajan-Pro-3-Regular.otf);
 }
 
 body {
-	max-width: 1920px;
-	margin: 0 auto;
-	width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 h1,
 h2 {
-	font-family: 'Game-of-Thrones', sans-serif;
+  font-family: "Game-of-Thrones", sans-serif;
 }
 
 * {
-	font-family: 'Trajan-Pro-3', sans-serif;
+  font-family: "Trajan-Pro-3", sans-serif;
 }
 
 /* ПРОБА - ПОИСК */
 .autocomplete {
-	/*the container must be positioned relative:*/
-	position: relative;
-	display: inline-block;
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
 }
 
 input {
-	border: 1px solid transparent;
-	background-color: #f1f1f1;
-	padding: 10px;
-	font-size: 16px;
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 10px;
+  font-size: 16px;
 }
 
-input[type='text'] {
-	background-color: #f1f1f1;
-	width: 100%;
+input[type="text"] {
+  background-color: #f1f1f1;
+  width: 100%;
 }
 
-input[type='submit'] {
-	background-color: DodgerBlue;
-	color: #fff;
+input[type="submit"] {
+  background-color: DodgerBlue;
+  color: #fff;
 }
 
 .autocomplete-items {
-	position: absolute;
-	border: 1px solid #d4d4d4;
-	border-bottom: none;
-	border-top: none;
-	z-index: 99;
-	/*position the autocomplete items to be the same width as the container:*/
-	top: 100%;
-	left: 0;
-	right: 0;
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
 }
 
 .autocomplete-items div {
-	padding: 10px;
-	cursor: pointer;
-	background-color: #fff;
-	border-bottom: 1px solid #d4d4d4;
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
 }
 
 .autocomplete-items div:hover {
-	/*when hovering an item:*/
-	background-color: #e9e9e9;
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
 }
 
 .autocomplete-active {
-	/*when navigating through the items using the arrow keys:*/
-	background-color: DodgerBlue !important;
-	color: #ffffff;
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 
 #search {
-	margin-left: 2rem;
-	cursor: pointer;
+  margin-left: 2rem;
+  cursor: pointer;
 }
 
 .card {
-	margin: auto;
-	width: 50%;
+  margin: auto;
+  width: 50%;
 }
 
 .character-pic {
-	width: 400px;
+  width: 400px;
 }
 /* ПРОБА - ПОИСК */
 
 /* ЦИТАТЫ */
 #quote-container {
-	margin: 20px auto;
-	max-width: 800px;
-	padding: 20px;
-	background-color: #f9f9f9;
-	border-radius: 8px;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  max-width: 800px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .quote-item {
-	margin-bottom: 20px;
-	padding: 10px;
-	border-left: 4px solid #333;
-	background-color: #fff;
-	border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-left: 4px solid #333;
+  background-color: #fff;
+  border-radius: 4px;
 }
 
 .quote-text {
-	font-size: 1.2rem;
-	font-style: italic;
-	margin-bottom: 10px;
-	color: #333;
+  font-size: 1.2rem;
+  font-style: italic;
+  margin-bottom: 10px;
+  color: #333;
 }
 
 .quote-author {
-	font-size: 1rem;
-	color: #555;
-	text-align: right;
+  font-size: 1rem;
+  color: #555;
+  text-align: right;
 }
 /* ЦИТАТЫ */
+
+/* КАРТОЧКА ГЕРОЯ */
+#card-container {
+  width: 100%;
+  height: 500px;
+  padding: 20px;
+}
+/* КАРТОЧКА ГЕРОЯ */
