--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -60,30 +60,32 @@ h2 {
   display: inline-block;
 }
 
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
+#myInput {
+  border: 1px solid #575756;
   padding: 10px;
   font-size: 16px;
+  background-color: transparent;
+  border-radius: 50px;
+  color: antiquewhite;
 }
 
-input[type="text"] {
-  background-color: #f1f1f1;
+#myInput:focus {
+  outline: 0;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #575756;
+  border-radius: 0;
+}
+
+#myInput[type="text"] {
   width: 100%;
-}
-
-input[type="submit"] {
-  background-color: DodgerBlue;
-  color: #fff;
 }
 
 .autocomplete-items {
   position: absolute;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #575756;
   border-bottom: none;
   border-top: none;
   z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
   right: 0;
@@ -92,24 +94,36 @@ input[type="submit"] {
 .autocomplete-items div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #575756;
   border-bottom: 1px solid #d4d4d4;
 }
 
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
+  background-color: rgb(100, 108, 110);
 }
 
 .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
+  background-color: black !important;
 }
 
 #search {
   margin-left: 2rem;
+  padding: 10px;
   cursor: pointer;
+  border-radius: 50px;
+  border: none;
+  background: linear-gradient(to right, #cfc09f 0%, #ffecb3 51%, #3a2c0f 100%);
+  transition: 0.5s;
+  background-size: 200% auto;
+}
+
+#search:hover {
+  background-position: right center;
+  color: antiquewhite;
+}
+
+#search:active {
+  box-shadow: rgba(255, 255, 255, 0.514) 0px 10px 10px;
 }
 
 .card {
@@ -119,10 +133,6 @@ input[type="submit"] {
   z-index: 2;
 }
 
-.character-pic {
-  width: 400px;
-  display: none;
-}
 /* ПРОБА - ПОИСК */
 
 /* ЦИТАТЫ */
