--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,189 +1,211 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 @font-face {
-  font-family: "Game-of-Thrones";
-  src: url(../fonts/game-of-thrones-kg25.ttf);
+	font-family: 'Game-of-Thrones';
+	src: url(../fonts/game-of-thrones-kg25.ttf);
 }
 @font-face {
-  font-family: "Trajan-Pro-3";
-  src: url(../fonts/Trajan-Pro-3-Regular.otf);
+	font-family: 'Trajan-Pro-3';
+	src: url(../fonts/Trajan-Pro-3-Regular.otf);
 }
 
 body {
-  background-image: url('../images/iron-throne.jpg');
-  background-color: #333;
-  background-size: cover;
-  background-position: center;
-  color: antiquewhite;
-  max-width: 1920px;
-  margin: 0 auto;
-  width: 100%;
+	background-image: url('../images/iron-throne.jpg');
+	background-color: #333;
+	background-size: cover;
+	background-position: center;
+	color: antiquewhite;
+	max-width: 1920px;
+	margin: 0 auto;
+	width: 100%;
 }
 
 h1,
 h2 {
-  font-family: "Game-of-Thrones", sans-serif;
+	font-family: 'Game-of-Thrones', sans-serif;
 }
 
 * {
-  font-family: "Trajan-Pro-3", sans-serif;
+	font-family: 'Trajan-Pro-3', sans-serif;
 }
 
 /* ПРОБА - ПОИСК */
 .description {
-  margin-bottom: 2rem;
-  text-align: center;
+	margin-bottom: 2rem;
+	text-align: center;
 }
 
 .title {
-  position: relative;
-  z-index: 1;
-  background: linear-gradient(to bottom, #cfc09f 27%, #ffecb3 40%, #3a2c0f 78%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+	position: relative;
+	z-index: 1;
+	background: linear-gradient(to bottom, #cfc09f 27%, #ffecb3 40%, #3a2c0f 78%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .searchbar {
-  margin-bottom: 2rem;
-  text-align: center;
+	margin-bottom: 2rem;
+	text-align: center;
 }
 
 .autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
+	/*the container must be positioned relative:*/
+	position: relative;
+	display: inline-block;
 }
 
 #myInput {
-  border: 1px solid #575756;
-  padding: 10px;
-  font-size: 16px;
-  background-color: transparent;
-  border-radius: 50px;
-  color: antiquewhite;
+	border: 1px solid #575756;
+	padding: 10px;
+	font-size: 16px;
+	background-color: transparent;
+	border-radius: 50px;
+	color: antiquewhite;
 }
 
 #myInput:focus {
-  outline: 0;
-  border: 1px solid transparent;
-  border-bottom: 1px solid #575756;
-  border-radius: 0;
+	outline: 0;
+	border: 1px solid transparent;
+	border-bottom: 1px solid #575756;
+	border-radius: 0;
 }
 
-#myInput[type="text"] {
-  width: 100%;
+#myInput[type='text'] {
+	width: 100%;
 }
 
 .autocomplete-items {
-  position: absolute;
-  border: 1px solid #575756;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  top: 100%;
-  left: 0;
-  right: 0;
+	position: absolute;
+	border: 1px solid #575756;
+	border-bottom: none;
+	border-top: none;
+	z-index: 99;
+	top: 100%;
+	left: 0;
+	right: 0;
 }
 
 .autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #575756;
-  border-bottom: 1px solid #d4d4d4;
+	padding: 10px;
+	cursor: pointer;
+	background-color: #575756;
+	border-bottom: 1px solid #d4d4d4;
 }
 
 .autocomplete-items div:hover {
-  background-color: rgb(100, 108, 110);
+	background-color: rgb(100, 108, 110);
 }
 
 .autocomplete-active {
-  background-color: black !important;
+	background-color: black !important;
 }
 
 #search {
-  margin-left: 2rem;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 50px;
-  border: none;
-  background: linear-gradient(to right, #cfc09f 0%, #ffecb3 51%, #3a2c0f 100%);
-  transition: 0.5s;
-  background-size: 200% auto;
+	margin-left: 2rem;
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 50px;
+	border: none;
+	background: linear-gradient(to right, #cfc09f 0%, #ffecb3 51%, #3a2c0f 100%);
+	transition: 0.5s;
+	background-size: 200% auto;
 }
 
 #search:hover {
-  background-position: right center;
-  color: antiquewhite;
+	background-position: right center;
+	color: antiquewhite;
 }
 
 #search:active {
-  transform: scale(0.95);
+	transform: scale(0.95);
 }
 
 .card {
-  margin: auto;
-  width: 50%;
-  position: relative;
-  z-index: 2;
+	margin: auto;
+	width: 50%;
+	position: relative;
+	z-index: 2;
 }
 
 /* ПРОБА - ПОИСК */
 
-/* ЦИТАТЫ */
-#quote-container {
-  margin: 20px auto;
-  max-width: 800px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+/* КАРТА И ЦИТАТЫ */
+#map-quote-section {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 20px;
+	margin: 20px auto;
+	max-width: 55%;
 }
 
+#map-container {
+	flex: 1;
+	height: 400px;
+	background-color: #f0f0f035; /* фон для видимости будущей карты */
+	border-radius: 8px;
+}
+
+#quote-container {
+	flex: 1;
+	background-color: transparent;
+	padding: 20px;
+	border-radius: 8px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+/* ЦИТАТЫ */
 .quote-item {
-  margin-bottom: 20px;
-  padding: 10px;
-  border-left: 4px solid #333;
-  background-color: #fff;
-  border-radius: 4px;
+	padding: 15px;
+	border-left: 4px solid #333;
+	background-color: rgba(255, 255, 255, 0.515);
+	border-radius: 4px;
+	text-align: center;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 .quote-text {
-  font-size: 1.2rem;
-  font-style: italic;
-  margin-bottom: 10px;
-  color: #333;
+	font-size: 1.2rem;
+	font-style: italic;
+	margin-bottom: 10px;
+	color: #333;
 }
 
 .quote-author {
-  font-size: 1rem;
-  color: #555;
-  text-align: right;
+	font-size: 1rem;
+	color: #555;
+	text-align: right;
 }
 /* ЦИТАТЫ */
 
 /* КАРТОЧКА ГЕРОЯ */
 #card-container {
-  width: 100%;
-  height: 500px;
-  padding: 20px;
-  position: relative;
-  color: #fff;
+	width: 100%;
+	height: 500px;
+	padding: 20px;
+	position: relative;
+	color: #fff;
 }
 
 #card-container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 1;
 }
 /* КАРТОЧКА ГЕРОЯ */
