--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -157,7 +157,8 @@ h2 {
   height: 700px;
   padding: 20px;
   position: relative;
-  color: #fff;
+  color: #f9f9f0;
+  /* color: #fff; */
   background-image: url("../images/iron-throne.jpg");
   background-position: top center;
 }
@@ -180,6 +181,17 @@ h2 {
   font-size: 1.5rem;
   margin-top: auto;
 }
+
+.label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.value {
+  display: block;
+  color: antiquewhite;
+}
+
 /* КАРТОЧКА ГЕРОЯ */
 
 #loading {
