--- a/public/styles/quiz.css
+++ b/public/styles/quiz.css
@@ -1,83 +1,201 @@
+@font-face {
+    font-family: "Game-of-Thrones";
+    src: url(../fonts/game-of-thrones-kg25.ttf);
+}
+
+@font-face {
+    font-family: "Trajan-Pro-3";
+    src: url(../fonts/Trajan-Pro-3-Regular.otf);
+}
+
 body {
 
-    font-family: Arial, sans-serif;
-    
-    background-color: #f4f4f4;
-    
+    /*  */
+    background-color: #0f0f0f;
     text-align: center;
-    
     margin: 0;
-    
     padding: 0;
     
     }
     
     .quiz-container {
-    
-    background-color: #fff;
-    
+    background-color: #050505;
     max-width: 500px;
-    
     margin: 0 auto;
-    
     padding: 20px;
-    
     border-radius: 5px;
-    
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px rgba(92, 28, 28, 0.2);
+    opacity: .8;
     
     }
     
     h1 {
-    
-    font-size: 24px;
-    
-    color: #333;
-    
+    font-family: "Game-of-Thrones";
+    font-size: 30px;
+    /* color: #f0dfdf; */
+    background: linear-gradient(
+        to bottom,
+        #cfc09f 27%,
+        #ffecb3 40%,
+        #3a2c0f 78%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    }
+
+    h2 {
+    font-family: "Game-of-Thrones";
+    font-size: 30px;
+    /* color: #f0dfdf; */
+    background: linear-gradient(
+        to bottom,
+        #cfc09f 27%,
+        #ffecb3 40%,
+        #3a2c0f 78%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     }
     
     #question {
-    
-    font-size: 18px;
-    
+    font-family: "Trajan-Pro-3";
+    font-size: 20px;
+    color: #beae97;
+    /* font-weight: bolder; */
     margin-top: 20px;
     
     }
     
     .options {
-    
     display: flex;
-    
     flex-direction: column;
-    
     margin-top: 20px;
     
     }
     
-    button {
-    
-    background-color: #007BFF;
-    
-    color: #fff;
-    
-    border: none;
-    
-    padding: 10px;
-    
+    .options button {
+    /* box-sizing: border-box; */
+    border: 1px solid #d6b88d;
     margin-bottom: 10px;
-    
     border-radius: 5px;
-    
+    padding: 10px;
+    box-shadow: 0 2px 10px 0 rgba(184, 164, 142, 0.4);
+    background: #2b2825;
+    color: #beae97;
+    font-family: "Trajan-Pro-3";
+    font-size: 18px;
     cursor: pointer;
     
     }
+
+    .options button:hover {
+        background-position: right center;
+        color: antiquewhite;
+
+    }
+
+    .options button:active {
+        transform: scale(0.95);
+    }
+
+    #result-text {
+        font-family: "Trajan-Pro-3";
+        font-size: 18px;
+        color: #beae97;
+    }
+
     
     #next-button {
+        /* margin-left: 2rem; */
+        padding: 10px 30px;
+        margin-top: 20px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 50px;
+        border: none;
+        font-family: "Trajan-Pro-3";
+        background: linear-gradient(
+            to right,
+            #cfc09f 0%,
+            #ffecb3 51%,
+            #3a2c0f 100%
+        );
+        transition: 0.5s;
+        background-size: 200% auto;
     
-    background-color: #28A745;
-    
+    }
+    #next-button:hover {
+        background-position: right center;
+        color: antiquewhite;
+    }
+
+    #next-button:active {
+        transform: scale(0.95);
+    }
+
+    #answer-button {
+        padding: 10px 30px;
+        margin-top: 20px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 50px;
+        border: none;
+        font-family: "Trajan-Pro-3";
+        background: linear-gradient(
+            to right,
+            #cfc09f 0%,
+            #ffecb3 51%,
+            #3a2c0f 100%
+        );
+        transition: 0.5s;
+        background-size: 200% auto;
+    }
+
+    #answer-button:hover {
+        background-position: right center;
+        color: antiquewhite;
+    }
+
+    #answer-button:active {
+        transform: scale(0.95);
     }
 
     .image {
         width: 100%;
+    }
+
+
+    /* видео */
+
+    .video-bg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        overflow: hidden;
+        
+    }
+    .video-bg video {
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    /* Затемнение фона для видео */
+    .video-bg:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Регулируйте значение альфа-канала (0.5) для нужной степени затемнения */
+        z-index: 0;
     }
