--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -455,6 +455,11 @@ figure {
   justify-content: space-evenly;
   width: 70%;
 }
+@media screen and (min-width:1715px) {
+    .recipes{
+        width: 60%;
+    }
+}
 .recipes .recipe-box {
   position: relative;
   width: 300px;
@@ -546,9 +551,10 @@ figure {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin: 10px;
   padding: 10px;
   flex-basis: 40%;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
 }
 .recipe__container-image {
   flex-basis: 60%;
@@ -558,7 +564,7 @@ figure {
   font-weight: 900;
 }
 .recipe__info {
-  margin-top: 60px;
+  margin-top: 30px;
   text-align: center;
 }
 .recipe__ingredients {
@@ -571,7 +577,6 @@ figure {
 }
 .recipe__text {
   text-align: center;
-  margin-top: 40px;
 }
 .recipe-photo {
   width: 100%;
@@ -581,16 +586,75 @@ figure {
 li {
   list-style-type: "- ";
 }
+.poison-box{
+  display: flex;
+  justify-content: space-between;
+  width: 65%;
+  margin: 40px 0 10px auto;
+}
+.grand{
+  width: 200px;
+}
+.grand__img{
+  width: 100%;
+  border-radius: 50%;
+}
+.autoRotatePoison{
+  width: 100px;
+  margin: 20px;
+  animation: autoRotateAnimation;
+  animation-timeline: view();
+}
+
+@keyframes autoRotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(373deg);
+  }
+}
+.autoBlur{
+  animation: autoBlurAnimation both;
+  animation-timeline: view(95% 15%);
+}
+@keyframes autoBlurAnimation{
+  from{
+    filter: blur(260px);
+  }to{
+    filter: blur();
+  }
+}
+.autoShow{
+  animation: autoShowAnimation both;
+  animation-timeline: view(80% 10%);
+}
+@keyframes autoShowAnimation{
+  from{
+    opacity: 0;
+    transform: translateY(50px) scale(0.9);
+  }to{
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+.divider_margin {
+  margin: 2rem 0;
+}
+
 
 /* звездочки */
 .card_stars {
-    max-width: 15rem;
+    max-width: 20rem;
     /* background: #fff; */
     margin: 0 1rem;
     padding: 1rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     width: 50%;
     border-radius: 0.5rem;
+    margin: 0 auto;
+    text-align: center;
 } 
 
     .rating-star {
